Removed wrong font in donation css and fixed the css link in inspiration.html

--- a/src/main/resources/static/css/donation.css
+++ b/src/main/resources/static/css/donation.css
@@ -1,7 +1,3 @@
-* {
-    font-family: 'Playfair Display', serif;
-}
-
 h2 {
     text-align: center;
     font-size: 40px;
